<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.UserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/u_page_title"
        android:textColor="#050505"
        android:textSize="28sp" />
    <!--用户界面-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--头部信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/me_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="25dp"
                    android:src="@mipmap/avatar01" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/me_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/u_page_username"
                        android:textColor="#131212" />

                    <TextView
                        android:id="@+id/me_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/u_page_decp"
                        android:textColor="#524F4F" />

                </LinearLayout>
            </LinearLayout>

            <!-- 用户部分信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/bar_subscribe_count"
                                android:layout_width="match_parent"
                                android:layout_height="43dp"
                                android:gravity="center_horizontal|bottom"
                                android:paddingBottom="2dp"
                                android:text="@string/u_page_follow_num"
                                android:textColor="#000000"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/bar_subscribe"
                                android:layout_width="match_parent"
                                android:layout_height="41dp"
                                android:gravity="center_horizontal|top"
                                android:paddingTop="2dp"
                                android:text="关注"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="97dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/bar_follow_count"
                                android:layout_width="match_parent"
                                android:layout_height="43dp"
                                android:gravity="center_horizontal|bottom"
                                android:paddingBottom="2dp"
                                android:text="@string/u_page_fans_num"
                                android:textColor="#000000"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/bar_follow"
                                android:layout_width="match_parent"
                                android:layout_height="41dp"
                                android:gravity="center_horizontal|top"
                                android:paddingTop="2dp"
                                android:text="@string/u_page_fans"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="99dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/bar_visit_count"
                                android:layout_width="match_parent"
                                android:layout_height="43dp"
                                android:gravity="center_horizontal|bottom"
                                android:paddingBottom="2dp"
                                android:text="17"
                                android:textColor="#000000"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/bar_visit"
                                android:layout_width="match_parent"
                                android:layout_height="42dp"
                                android:gravity="center_horizontal|top"
                                android:paddingTop="2dp"
                                android:text="@string/u_page_enter"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/bar_ranking_count"
                                android:layout_width="match_parent"
                                android:layout_height="43dp"
                                android:gravity="center_horizontal|bottom"
                                android:paddingBottom="2dp"
                                android:text="@string/u_page_order"
                                android:textColor="#000000"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/bar_ranking"
                                android:layout_width="match_parent"
                                android:layout_height="41dp"
                                android:gravity="center_horizontal|top"
                                android:paddingTop="2dp"
                                android:text="排名"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!--中间内容-->
            <!-- 我的博客-->
            <RelativeLayout
                android:id="@+id/user_blog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_blog"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/manage" />
            </RelativeLayout>

            <!-- 我的收藏-->
            <RelativeLayout
                android:id="@+id/user_collect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_collection"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/collect" />
            </RelativeLayout>
            <!-- 我的关注-->
            <RelativeLayout
                android:id="@+id/user_follow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_follow"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/foll2" />
            </RelativeLayout>
            <!-- 我的消息-->
            <RelativeLayout
                android:id="@+id/user_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_message"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/message" />
            </RelativeLayout>

            <!-- 最近浏览-->
            <RelativeLayout
                android:id="@+id/user_history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_history"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/history" />
            </RelativeLayout>
            <!-- 设置-->
            <RelativeLayout
                android:id="@+id/user_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_setting"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/setting" />
            </RelativeLayout>
            <!-- 意见反馈-->
            <RelativeLayout
                android:id="@+id/user_feedback"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/u_page_advise"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/feedback" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>